Logo background fix for dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -4219,7 +4219,7 @@ footer {
     margin-bottom: 1.5em;
     width: 100%;
     a {
-        background: white;
+        background: transparent;
     }
   }
 
